server/tree-sitter-hercscript/corpus/script/append_cmd.txt
===================================================
Script NPC with a parameter made of appended strings and command
===================================================

prontera,150,150,4	script	Test	1_M_01,{
    cmd("str1" + "str2" + cmd2("str3"));
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
			(function_stmt
				(identifier)
                (parameter_list
                    (plusop
                        (plusop
                            (string)
                            (string)
                        )
                        (function_stmt
                            (identifier)
                            (parameter_list
                                (string)
                            )
                        )
                    )
                )
			)
		)
	)
)
