server/tree-sitter-hercscript/corpus/script/assigment/direct.txt
===================================================
Assignment test
===================================================

-	script	Test	1_M_01,{
    id = 2;
    id += 2;
    id -= 2;
    id *= 2;
    id **= 2;
    id /= 2;
    id %= 2;
    id <<= 2;
    id >>= 2;
    id &= 2;
    id ^= 2;
    id |= 2;
}

---

(source_file
	(script_def
    	(position)
    	(npc_name)
    	(npc_sprite)
    	(block
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
			(assignment_stmt
				(identifier)
				(number)
            )
		)
	)
)
