server/tree-sitter-hercscript/corpus/script/assigment/with_ternary.txt
===================================================
Ternary Assignment test
===================================================

-	script	Test	1_M_01,{
    id = (id ? 1 : 0);
}

---

(source_file
	(script_def
    	(position)
    	(npc_name)
    	(npc_sprite)
    	(block
			(assignment_stmt
				(identifier)
				(ternary
                    (identifier)
                    (number)
                    (number)
                )
            )
		)
	)
)
