server/tree-sitter-hercscript/corpus/script/commands/cmd_1_param_exp.txt
===================================================
Script NPC with a 1 param command with expression as value
===================================================

prontera,150,150,4	script	Test	1_M_01,{
	setquest((1000 + 1));
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
			(function_stmt
				(identifier)
				(parameter_list
					(plusop
						(number)
						(number)
					)
				)
			)
		)
	)
)
