server/tree-sitter-hercscript/corpus/script/commands/cmd_2_mixparam.txt
===================================================
Script NPC - command with 2 mixed parameters (const, int)
===================================================

prontera,150,150,4	script	Test	1_M_01,{
	getitem(My_Item, 10);
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
			(function_stmt
				(identifier)
				(parameter_list
					(identifier)
					(number)
				)
			)
		)
	)
)
