server/tree-sitter-hercscript/corpus/script/conditionals/if_bitwise.txt
===================================================
Simple if condition
===================================================

prontera,150,150,4	script	Test	1_M_01,{
    if (Id & 2) {

    }
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
			(if_stmt
                (bitwiseop
					(identifier)
					(number)
				)
                (block)
			)
		)
	)
)
