server/tree-sitter-hercscript/corpus/script/conditionals/if_elseif_else.txt
===================================================
Simple if/else if/else condition
===================================================

prontera,150,150,4	script	Test	1_M_01,{
    if (Id > 10) {

    } else if (Id > 5) {

    } else {

    }
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
			(if_stmt
                (compareop
					(identifier)
					(number)
				)
                (block)
                (if_stmt
					(compareop
						(identifier)
						(number)
					)
                    (block)
                    (block)
                )
			)
		)
	)
)
