server/tree-sitter-hercscript/corpus/script/nested_cmd.txt
===================================================
Script NPC with nested script commands
===================================================

prontera,150,150,4	script	Test	1_M_01,{
	cmd1(cmd2(10, cmd3()), "param");
}

---

(source_file
	(script_def
    	(position
			(identifier)
			(number)
			(number)
			(number)
		)
    	(npc_name)
    	(npc_sprite)
    	(block
			(function_stmt
				(identifier)
                (parameter_list
                    (function_stmt
                        (identifier)
                        (parameter_list
                            (number)
                            (function_stmt
                                (identifier)
                                (parameter_list)
                            )
                        )
                    )
                    (string)
                )
			)
		)
	)
)
